src/scss/layout/admin/settings/layout.scss
.settings-content-main {
  position: absolute;
  padding: 40px 40px 0;
  width: 100%;
  height: calc(100% - 48px);
  max-height: calc(100% - 48px);
  overflow-y: auto;
}

@media (max-width: 767.98px) {
  .settings-content-main {
    padding-left: 20px;
    padding-right: 20px;
  }
}

.settings-content-title {
  color: #363636;
  display: block;
  font-size: 24px;
  margin-bottom: 15px;
}

.settings-content-description {
  color: #888;
  font-size: 12px;
  margin-bottom: 10px;
  overflow: hidden;
}

.settings-content-hr {
  border-top: 1px solid #ccc;
  margin: 35px 0;
}

.settings-content-action-icon {
  color: #ccc;
  cursor: pointer;
  font-size: 24px;
  margin-left: 10px;

  &:hover {
    color: #888;
  }

  .zmdi-delete:hover,
  &.zmdi-delete:hover {
    color: #dd4330;
  }
}

.settings-content-tab-container {
  border-bottom: 1px solid #e9e9e9;
  margin: 32px 0;

  &.is-condensed {
    margin: 20px 0;
  }

  &.is-center {
    display: flex;
    justify-content: center;
  }

  &.no-marign {
    margin: 10px 0 0;
  }
}

.settings-content-table {
  overflow-x: auto;
}

.settings-content-table-block {
  width: 100%;

  .settings-content-table-header {
    border-bottom: 1px solid #dce3e6;
  }

  .settings-content-table-rows {
    height: auto !important;
    overflow-y: visible !important;
    max-height: 387px;
  }

  .sortable-list {
    overflow: visible;

    &.is-dragging {
      overflow: auto;
    }

    .sortable-item {
      position: relative;
      border: none;
      border-bottom: 1px solid #dce3e6;
      border-radius: 0;

      &.is-dragging {
        opacity: 0.6;
      }
    }

    &:last-of-type .sortable-item:last-of-type {
      border-bottom: none;
    }
  }

  &.is-bordered .settings-content-table-item {
    border-bottom: 1px solid #dce3e6;

    &:last-of-type {
      border-bottom: none;
    }
  }
}

.ignore-header-border .settings-content-table-header {
  border-bottom: none;
}

.settings-content-table-item {
  padding: 5px;
  height: 56px;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px 5px;
  cursor: default;
  box-shadow: none;
  font-size: 13px;

  &:hover {
    background-color: #fcfeff;
  }

  > div {
    margin: 5px;
  }

  .settings-content-table-item-label {
    overflow: hidden;
    font-weight: 500;
    white-space: nowrap;
    display: flex;
    margin-left: 15px;
    width: 200px;

    &.is-header .settings-content-table-item-label-content {
      font-weight: 600;
      color: #696e6f;
    }
  }

  .settings-content-table-item-column {
    width: 200px;
    margin: 4px 0;

    &.is-desktop {
      display: block;
    }

    &.is-mobile {
      display: none;
    }

    &.is-header {
      font-weight: 600;
      color: #696e6f;
    }

    &.is-narrow {
      width: 100px;
    }

    &.is-long {
      width: 400px;
    }

    .form-group {
      padding: 0;
      margin: 0;

      .form-control {
        border-bottom: none;
      }
    }

    .dropdown {
      border-bottom: none;

      &:focus {
        box-shadow: none;
      }
    }

    .dropdown-selected {
      display: flex;
      height: auto;
    }

    .dropdown-indicator {
      display: flex;
      align-items: center;
      position: relative;
      margin-left: 5px;
      -ms-transform: none;
      -webkit-transform: none;
      transform: none;
    }
  }

  .settings-content-table-item-actions {
    width: 37px;
    display: flex;
    justify-content: flex-end;
    margin-left: auto;

    &[data-colspan='5'] {
      width: 185px;
    }
    &[data-colspan='4'] {
      width: 148px;
    }
    &[data-colspan='3'] {
      width: 111px;
    }
    &[data-colspan='2'] {
      width: 74px;
    }

    .dropdown {
      border-bottom: none;

      &:focus {
        box-shadow: none;
      }
    }

    a:hover {
      text-decoration: none;
    }
  }

  .settings-content-table-item-action-icon,
  .settings-content-table-item-drag-icon,
  .settings-content-table-item-icon {
    height: 22px;
    width: 22px;
    margin-right: 15px;
  }

  .settings-content-table-item-action-icon i,
  .settings-content-table-item-drag-icon i,
  .settings-content-table-item-icon i {
    font-size: 22px;
    color: #dce3e6;
  }

  .settings-content-table-item-drag-icon {
    margin-left: 15px;

    + .settings-content-table-item-label {
      margin-left: 0;
    }

    i {
      cursor: grab;
    }
  }

  .settings-content-table-item-icon i {
    color: #0c0d0d;
  }

  .settings-content-table-item-action-icon i {
    cursor: grab;
    color: #909799;
  }

  .settings-content-table-item-action-icon i:hover,
  .settings-content-table-item-drag-icon i:hover {
    color: inherit;
  }

  .settings-content-table-item-action-icon i.drag-handle,
  .settings-content-table-item-drag-icon i.drag-handle {
    cursor: url(https://mail.google.com/mail/images/2/openhand.cur), move;
    cursor: -webkit-grab;
    cursor: -moz-grab;
    cursor: -webkit-grab, -moz-grab, url(https://mail.google.com/mail/images/2/openhand.cur), move;
  }

  .settings-content-table-item-action-icon i.zmdi-lock,
  .settings-content-table-item-drag-icon i.zmdi-lock {
    cursor: inherit;
    color: inherit;
  }

  .settings-content-table-item-action-icon i.is-disabled,
  .settings-content-table-item-drag-icon i.is-disabled {
    color: #dce3e6;
  }

  .settings-content-table-item-image {
    width: 100%;
    height: 100%;
  }

  &.is-disabled {
    .settings-content-table-item-label,
    .settings-content-table-item-icon i,
    .settings-content-table-item-action-icon {
      color: #dce3e6;
    }

    .settings-content-table-item-column,
    .settings-content-table-item-drag-icon {
      display: none;
    }

    .settings-content-table-item-drag-icon + .settings-content-table-item-label {
      margin-left: 15px;
    }
  }
}

@media (max-width: 1199.98px) {
  .settings-content-table-item-column {
    &.is-desktop {
      display: none !important;
    }

    &.is-mobile {
      display: block !important;
    }
  }
}

.settings-content-table-empty {
  color: #dce3e6;
  font-size: 24px;
  font-weight: 500;
  margin-bottom: 15px;
  display: block;
}

.settings-content-dropdown-width {
  min-width: 300px;
}

@media (max-width: 991.98px) {
  .settings-content-dropdown-width {
    min-width: 250px;
  }
}

.settings-content-available-on {
  display: flex;
  margin-right: 20px;
  font-size: 22px;
  height: 22px;
  color: #dce3e6;

  > i {
    margin-right: 8px;
  }
}

